--- a/build.gradle
+++ b/build.gradle
@@ -23,11 +23,18 @@ dependencies {
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 	//암호화
 	implementation 'org.springframework.boot:spring-boot-starter-security:2.4.2'
-	implementation "io.springfox:springfox-boot-starter:3.0.0"
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	//jpa
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	//lombok
+	annotationProcessor("org.projectlombok:lombok:1.18.8")
+	implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
+	//mysql
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
+	implementation "io.springfox:springfox-boot-starter:3.0.0"
+
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
