--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
   driver-class-name: com.mysql.cj.jdbc.Driver
   url: jdbc:mysql://localhost:3306/polewear?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
   username: root
-  password: root
+  password: dldbwls1128
  mvc:
   static-path-pattern: /static/** 
   view:
